# talentscout-ai-chatbot

./: .env.example  .gitignore  DOCUMENTATION.md  HEROKU_DEPLOYMENT.md  INSTRUCTIONS.md  PROJECT_SUMMARY.md  README.md  deploy_to_heroku.sh  pyproject.toml  upload_to_github.sh
src/: app.py  config.py  conversation.py  prompts.py
src/utils/: helpers.py
