[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "talentscout-ai-chatbot"
version = "1.0.0"
description = "AI-powered interview question generator using Groq API and Streamlit"
authors = [{name = "Harshit", email = "harshit@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.45.0",
    "groq>=0.25.0", 
    "python-dotenv>=1.1.0"
]

[project.urls]
Homepage = "https://github.com/Alphabeast1707/talentscout-ai-chatbot"
Repository = "https://github.com/Alphabeast1707/talentscout-ai-chatbot"
